--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,11 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "socket.io": "^4.7.0",
+        "bonjour-service": "^1.3.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^4.18.0",
-        "cors": "^2.8.5"
+        "localtunnel": "^2.0.2",
+        "socket.io": "^4.7.0"
     }
 }
