--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,11 @@ HOST=0.0.0.0
 # Socket.io Configuration
 SOCKET_MAX_BUFFER_SIZE=100000000
 
+# Ngrok Configuration (Get token at ngrok.com)
+NGROK_AUTHTOKEN=your_ngrok_token_here
+
 # CORS Configuration (comma-separated origins)
+
 CORS_ORIGINS=*
 
 # Optional: Production Settings
