--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@ngrok/ngrok": "^1.7.0",
         "bonjour-service": "^1.3.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
