--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^4.18.0",
+        "nat-upnp": "^1.1.1",
         "socket.io": "^4.7.0"
     }
 }
