--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "dependencies": {
         "@capacitor/android": "^6.0.0",
         "@capacitor/core": "^6.0.0",
-        "@capacitor/cli": "^6.0.0"
+        "@capacitor/cli": "^6.0.0",
+        "bonjour-service": "^1.3.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^4.18.0",
+        "nat-upnp": "^1.1.1",
+        "socket.io": "^4.7.0"
     },
     "devDependencies": {}
 }
